# app_irt

./: LICENSE
app_irtjv/: CMakeLists.txt  package.xml
app_irtjv/models/tag_01/: model.sdf
app_irtjv/scripts/: move_tag
app_irtjv/urdf/: kinect.xacro  table_ur.urdf.xacro  ur_sim.urdf.xacro
app_irtjv/worlds/: robot.world
app_scripts/: CMakeLists.txt  package.xml  setup.py
app_scripts/scripts/: app_sm
app_scripts/src/app_scripts/: moveit_states.py  other_states.py
app_ur/: .setup_assistant  CMakeLists.txt  package.xml
app_ur/config/: ros_controllers.yaml  ur5_kinect.srdf
app_ur/launch/: app_ur_moveit_planning_execution.launch  chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  demo_gazebo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  ur5_kinect_moveit_controller_manager.launch.xml  ur_upload.launch  warehouse.launch
